Fix buttons margin on mobile

--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -148,6 +148,7 @@
     }
     #apply-button{
       margin-right: 20px;
+      margin-top: 20px;
     }
   }
   .social-links-header{
@@ -188,9 +189,6 @@
       }
       button{
         display: block;
-      }
-      #sponsor-button{
-        margin-top: 15px;
       }
     }
   }
